# Ai_pred

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  intelligence.py  screener.py  sector.py  service.py
app/ai/: __init__.py  calibration.py  dataset.py  heuristic.py  model.py  outcome_model.py  predictor.py  similarity_engine.py  sklearn_model.py
app/api/: forward.py  forward_analytics.py  main.py  schemas.py
app/backtest/: __init__.py  engine.py  outcome_backtest.py  run.py  (+1 more)
artifacts/: model_best.pt  outcome_model.pkl  outcome_model_nse.pkl  sklearn_model.pkl
colab/: Aegis_Host_Colab.ipynb  Aegis_Train_Colab.ipynb
docker/: Dockerfile  docker-compose.yml
docs/: DEPLOY_RENDER.md  HOW_IT_WORKS.md  RESULTS.md  ROADMAP.md
reports/: accuracy_improvement_summary.md  compounding_backtest_summary.md  feature_group_comparison.csv  feature_group_comparison.md  feature_leakage_tests.json  final_accuracy_summary.md  outcome_model_summary.md  self_awareness.md
tests/: conftest.py  test_backtest.py  test_candlesticks.py  test_chat.py  test_confidence_analysis.py  test_decision_service.py  test_feature_leakage.py  test_forward_api.py  test_forward_dashboard_api.py  test_forward_testing_engine.py  test_indicators.py  test_llm_chat.py  test_outcome_model.py  test_patterns_extra.py  test_prediction_history.py  test_prediction_store.py  test_risk.py  test_rules.py  test_sector.py  test_sentiment.py  test_sklearn_model.py  test_smc.py  test_training_api.py  test_walk_forward.py
(+101 files in other folders)
